# bfsi-api

./: .gitignore  HANDOVER.md  README.md  pyproject.toml
api/: main.py  rag.py
data/: generate.py
data/docs/: claim_051.txt  claim_080.txt  claim_083.txt  claim_151.txt  claim_236.txt  credit_memo_001.txt  credit_memo_002.txt  credit_memo_003.txt  credit_memo_004.txt  credit_memo_005.txt  credit_memo_006.txt  credit_memo_007.txt  credit_memo_008.txt  credit_memo_009.txt  credit_memo_010.txt  credit_memo_011.txt  credit_memo_012.txt  credit_memo_013.txt  credit_memo_014.txt  credit_memo_015.txt  credit_memo_016.txt  credit_memo_017.txt  credit_memo_018.txt  credit_memo_019.txt  credit_memo_020.txt  credit_memo_021.txt  credit_memo_022.txt  credit_memo_023.txt  credit_memo_024.txt  credit_memo_025.txt  credit_memo_026.txt  credit_memo_027.txt  credit_memo_028.txt  credit_memo_029.txt  credit_memo_030.txt  credit_memo_031.txt  credit_memo_032.txt  credit_memo_033.txt  credit_memo_034.txt  credit_memo_035.txt  (+35 more)
scenarios/: 01_retail_banking_copilot.md  02_credit_memo_rag.md  03_advisor_recall.md  04_claims_triage.md  05_compliance_qa.md  06_cross_product_360.md  07_cost_routing_demo.md
tests/: smoke_test.py
