[project]
name = "bfsi-api"
version = "0.1.0"
description = "Synthetic BFSI dataset + RAG/agent sandbox for rapid prototyping against realistic Banking, Financial Services, and Insurance workloads."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "faker>=24.0",
    "pydantic>=2.6",
    "chromadb>=0.4.24",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
